First Engine GraphicalService preview with a start of the game

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,21 +11,21 @@ add_executable(${EXECUTABLE_NAME}
 
         sources/engine/ForwardDeclaration.hpp
         sources/engine/Runner.hpp
-        sources/engine/EngineStop.hpp
+        sources/engine/EngineStop.cpp sources/engine/EngineStop.hpp
         sources/engine/EngineStatus.hpp
         sources/engine/service/Service.hpp
         sources/engine/entity/Entity.hpp
         sources/engine/scope/Scope.hpp
         sources/engine/service/GraphicalService.cpp sources/engine/service/GraphicalService.hpp
         sources/engine/display/Texture.hpp
+        sources/engine/display/Window.hpp
 
         sources/services/TestService.hpp
         sources/engine/service/GameService.cpp sources/engine/service/GameService.hpp
         sources/engine/service/NetService.cpp sources/engine/service/NetService.hpp
 
-        sources/scopes/EmptyScope.hpp
-        sources/engine/display/Window.hpp
-
+        sources/scopes/TestScope.hpp
+        sources/entities/PlayerShip.cpp sources/entities/PlayerShip.hpp
         )
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})
