Moving files in the proper directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(EXECUTABLE_NAME "r-type")
 set(CMAKE_CXX_STANDARD 14)
 
 include_directories(sources/)
+include_directories(includes/)
 
 add_executable(${EXECUTABLE_NAME}
         sources/main.cpp
@@ -25,17 +26,21 @@ add_executable(${EXECUTABLE_NAME}
         sources/engine/service/GameService.cpp sources/engine/service/GameService.hpp
         sources/engine/service/NetService.cpp sources/engine/service/NetService.hpp
 
-        sources/scopes/EmptyScope.hpp
-
         includes/network/Addr.hpp
         includes/network/Select.hpp
         includes/network/SocketException.hpp
         includes/network/Socket.hpp
+        includes/server/Protocol.hpp
+        includes/server/Game.hpp
+        includes/server/Server.hpp
 
         sources/network/Addr.cpp
         sources/network/Select.cpp
         sources/network/SocketException.cpp
         sources/network/Socket.cpp
+        sources/server/sources/Server.cpp
+        sources/server/main.cpp
+
         sources/scopes/TestScope.hpp
         sources/entities/PlayerShip.cpp sources/entities/PlayerShip.hpp
         sources/entities/Asteroid.cpp sources/entities/Asteroid.hpp
