--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,9 +27,31 @@ add_executable(${EXECUTABLE_NAME}
         sources/engine/service/NetService.cpp sources/engine/service/NetService.hpp
 
         sources/scopes/TestScope.hpp
-        sources/entities/ships/PlayerShip.cpp sources/entities/ships/PlayerShip.hpp
-        sources/entities/Asteroid.cpp sources/entities/Asteroid.hpp
-        sources/entities/Projectile.cpp sources/entities/Projectile.hpp sources/entities/Weapon.cpp sources/entities/Weapon.hpp
+        sources/entities/ships/PlayerShip.cpp
+        sources/entities/ships/PlayerShip.hpp
+        sources/entities/ships/Ship.cpp
+        sources/entities/ships/Ship.hpp
+        sources/entities/ships/sub/_Wing.hpp
+        sources/entities/ships/sub/Arc.hpp
+        sources/entities/ships/sub/Interceptor.hpp
+        sources/entities/ships/sub/XWing.hpp
+        sources/entities/ships/sub/YWing.hpp
+        sources/entities/ships/sub/Enemy1.hpp
+        sources/entities/Asteroid.cpp
+        sources/entities/Asteroid.hpp
+        sources/entities/Projectiles/Projectile.cpp
+        sources/entities/Projectiles/Projectile.hpp
+        sources/entities/Projectiles/sub/SinusProjectile.cpp
+        sources/entities/Projectiles/sub/SinusProjectile.hpp
+        sources/entities/weapons/Weapon.cpp
+        sources/entities/weapons/Weapon.hpp
+        sources/entities/weapons/AWeapon.hpp
+        sources/entities/weapons/IWeapon.hpp
+        sources/entities/weapons/sub/Laser1.hpp
+        sources/entities/weapons/sub/Laser2.hpp
+        sources/entities/weapons/sub/Laser3.hpp
+        sources/entities/weapons/sub/Laser4.hpp
+        sources/entities/weapons/sub/Laser4.cpp
 
         repos/imgui/imgui.cpp
         repos/imgui/imgui_draw.cpp
