Creation of IA for the game, 4 differents IA created

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,8 @@ add_executable(${EXECUTABLE_NAME}
         sources/entities/ships/sub/XWing.hpp
         sources/entities/ships/sub/YWing.hpp
         sources/entities/ships/sub/Enemy1.hpp
+        sources/entities/ships/sub/Enemy2.hpp
+        sources/entities/ships/sub/Enemy3.hpp
         sources/entities/Asteroid.cpp
         sources/entities/Asteroid.hpp
         sources/entities/projectiles/Projectile.cpp
