--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ add_executable(${EXECUTABLE_NAME}
         sources/entities/ships/sub/Enemy1.hpp
         sources/entities/ships/sub/Enemy2.hpp
         sources/entities/ships/sub/Enemy3.hpp
+        sources/entities/ships/sub/Enemy4.hpp
         sources/entities/Asteroid.cpp
         sources/entities/Asteroid.hpp
         sources/entities/projectiles/Projectile.cpp
